--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,6 @@
     "require": {
         "php": "^8.1"
     },
-    "require-dev": {
-        "pestphp/pest": "4.x-dev"
-    },
     "autoload": {
         "psr-4": {
             "Bright\\VCard\\": "src/"
@@ -32,5 +29,8 @@
         ]
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "require-dev": {
+        "pestphp/pest": "^3.8"
+    }
 }
